--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,11 @@
 *{
     float: left;
     font-family: sans-serif;
+    -moz-user-select:none;
+	-webkit-user-select:none;
+	-ms-user-select:none;
+	user-select:none;
+    box-sizing: border-box;
 }
 html, body{
     width: 100%;
@@ -13,18 +18,23 @@ h2{
     text-align: center;
 }
 #start{
-    width: 100px;
-    height: 30px;
-    line-height: 30px;
+    width: 150px;
+    height: 50px;
+    line-height: 50px;
     background: #09d;
-    border-radius: 2px;
+    border-radius: 3px;
     text-align: center;
     color: #eee;
     cursor: pointer;
-    margin: 10px calc((100% - 100px) / 2);
+    margin: 10px calc((100% - 150px) / 2);
 }
 #text-container{
     width: 100%;
+}
+select{
+    width: 100px;
+    height: 20px;
+    margin: 0 0 0 10px;
 }
 textarea{
     width: calc(50% - 20px);
@@ -33,6 +43,18 @@ textarea{
     margin: 10px;
     padding: 5px;
     font-family: courier;
-    box-sizing: border-box;
     resize: none;
+}
+footer{
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
+    font-size: 15px;
+    position: fixed;
+    bottom: 0;
+    text-align: center;
+}
+footer a{
+    float: none;
+    color: #0077ac
 }
