--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ textarea{
     margin: 10px;
     padding: 5px;
     font-family: courier;
-    resize: none;
+    resize: vertical;
     outline-color: #004bcc;
 }
 footer{
@@ -56,8 +56,6 @@ footer{
     height: 40px;
     line-height: 40px;
     font-size: 15px;
-    position: fixed;
-    bottom: 0;
     text-align: center;
 }
 footer a{
