--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ select{
     height: 30px;
 }
 textarea{
-    width: calc(50% - 20px);
+    width: calc(100vw - 20px);
     height: 400px;
     border-radius: 2px;
     margin: 10px;
